--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,9 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/src/config/config.ts
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
