--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "whats-the-weather",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://giovcandido.github.io/whats-the-weather/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
-    "@types/sass": "^1.16.0"
+    "@types/sass": "^1.16.0",
+    "gh-pages": "^3.1.0"
   }
 }
